RESOLVED FIXED45941
[GTK] [REGRESSION] Listbox rendering is incorrect
https://bugs.webkit.org/show_bug.cgi?id=45941
Summary [GTK] [REGRESSION] Listbox rendering is incorrect
Martin Robinson
Reported 2010-09-16 19:50:07 PDT
Since the shadow tiling patch landed, listbox rendering has been incorrect. Selecting an item, paints the selection color on all items above that item. On investigation, it appears as though the shadow is always being applied.
Attachments
Patch for this issue (2.14 KB, patch)
2010-09-16 20:02 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-09-16 20:02:15 PDT
Created attachment 67876 [details] Patch for this issue
Alejandro G. Castro
Comment 2 2010-09-16 23:28:31 PDT
Looks good to me.
Martin Robinson
Comment 3 2010-09-17 10:45:01 PDT
Xan r+'d this, but he is having connectivity issues.
Martin Robinson
Comment 4 2010-09-17 10:48:24 PDT
Note You need to log in before you can comment on or make changes to this bug.