WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp
@@ -641,6 +641,12 @@ void GraphicsContext::fillRect(const FloatRect& rect)
 static void drawBorderlessRectShadow(GraphicsContext* context, const FloatRect& rect, const Color& rectColor)
 {
 #if ENABLE(FILTERS)
+    FloatSize shadowOffset;
+    float shadowBlur;
+    Color shadowColor;
+    if (!context->getShadow(shadowOffset, shadowBlur, shadowColor))
+        return;
+
     AffineTransform transform = context->getCTM();
     // drawTiledShadow still does not work with rotations.
     if ((transform.isIdentityOrTranslationOrFlipped())) {
@@ -654,13 +660,6 @@ static void drawBorderlessRectShadow(GraphicsContext* context, const FloatRect& 
 
         return;
     }
-
-    FloatSize shadowOffset;
-    float shadowBlur;
-    Color shadowColor;
-
-    if (!context->getShadow(shadowOffset, shadowBlur, shadowColor))
-        return;
 
     IntSize shadowBufferSize;
     FloatRect shadowRect;
